@@ -1,5 +1,10 @@
 2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>
 
+	* src/rb_rating_helper.c: display a warning if one of the star
+	  icons cannot be loaded.
+
+2008-01-17 Jorg Schuler <jcsjcs at users.sourceforge.net>
+
 	* src/display_tracks.c: let gtkpod remember column sizes again.
 
 	* src/prefs.c: enable horizontal scrollbar in the track view by
